<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/press_color_effect"
    android:padding="@dimen/ten_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.restaurant.brownleaf.screens.MyOrderActivity">


    <LinearLayout
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_order_top_view"
        android:layout_alignParentTop="true"
        android:background="@drawable/layout_border_ash"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/quad_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left"
                android:paddingLeft="@dimen/ten_padding"
                android:text="@string/Table"
                android:textColor="@color/matte_red"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tableNumberTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left"
                android:paddingLeft="@dimen/ten_padding"
                android:text="Total 285"
                android:textColor="@color/matte_red"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/quad_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left"
                android:paddingLeft="@dimen/ten_padding"
                android:text="@string/Date"
                android:textColor="@color/matte_red"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left"
                android:paddingLeft="@dimen/ten_padding"
                android:text="Total 285"
                android:textColor="@color/matte_red"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/quad_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left"
                android:paddingLeft="@dimen/ten_padding"
                android:text="@string/Time"
                android:textColor="@color/matte_red"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left"
                android:paddingLeft="@dimen/ten_padding"
                android:text="Total 285"
                android:textColor="@color/matte_red"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomLL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_order_bottom_view"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalPriceTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="right"
            android:paddingRight="@dimen/ten_padding"
            android:paddingTop="@dimen/quad_padding"
            android:text="Total 285"
            android:textColor="@color/matte_red"
            android:textSize="@dimen/text_size_tiny_large_title"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/midLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomLL"
        android:layout_below="@id/topLL"
        android:layout_marginTop="@dimen/ten_padding"
        android:background="@drawable/layout_border_ash"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/quad_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/Item"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/Quantity"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/Price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />


    </LinearLayout>


</RelativeLayout>
